genctl-ci/calico/deny-all-outbound-public.yaml
# Denies all other egress from public interface.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: deny-all-outbound-public
spec:
  egress:
  - action: Deny
    destination: {}
    source: {}
  order: 1850
  selector: ibm.role == 'worker_public'
  types:
  - Egress
